Correctif description utilisateur aligné à gauche
- Définition alignement horizontal à justifié.
- N.B. : La description de la <textarea> de l'updateProfile reste aligné
à gauche car cette propriété CSS n'est pas prise en charge pour ce type
de balise selon les spécifications W3C.

--- a/web-resources/src/main/resources/css/loap-main.css
+++ b/web-resources/src/main/resources/css/loap-main.css
@@ -2344,6 +2344,8 @@ a.label.ourbody:hover, a.label.ourbody:focus {background-color: #a17;}
 .user-profile .user-role {}
 .user-profile .user-desc {padding: .375rem;}
 
+.user-profile .user-desc {text-align: justify;}
+
 /* Below are classes for user profile using HTML input mimics */
 .user-profile a.picture {position: relative;}
 .user-profile a.picture:hover,
